# RepeatDetector

./: .gitignore  CMakeLists.txt  README.md
Profiles/: README.md
Profiles/CAG/: Annex10_cag_correctedFreq_notlog_AND_Complete.prf  README.md
RepeatDetector-1.0.15eb445-Release-Linux-x86_64/data/: SMRT_REV.prf  cag.prf
Windows/: README.md
cmake/: CMakeDetermineCCompiler.cmake.old  CMakeDetermineSystem.cmake.old
data/: CMakeLists.txt
doc/: RepeatDetecter.tex
macOS/: README.md
macOS/RDProgramRunner.app/Contents/: Info.plist
macOS/RDProgramRunner.app/Contents/Frameworks/: libwx_baseu_net-3.2.0.0.0.dylib  libwx_osx_cocoau_core-3.2.0.0.0.dylib
macOS/RDProgramRunner.app/Contents/Frameworks/Python3.framework/Versions/3.9/: Python3
macOS/RDProgramRunner.app/Contents/Frameworks/Python3.framework/Versions/3.9/_CodeSignature/: CodeResources
macOS/RDProgramRunner.app/Contents/Frameworks/wx/: libwx_baseu-3.2.0.0.0.dylib  libwx_baseu_net-3.2.0.0.0.dylib  libwx_osx_cocoau_html-3.2.0.0.0.dylib
macOS/RDProgramRunner.app/Contents/MacOS/: RDProgramRunner
macOS/RDProgramRunner.app/Contents/Resources/: libwx_baseu-3.2.0.0.0.dylib  libwx_osx_cocoau_html-3.2.0.0.0.dylib
macOS/RDProgramRunner.app/Contents/_CodeSignature/: CodeResources
src/: CMakeLists.txt  GenPRF.c  PBTraceStat.c  RepeatDetecter.c  config.h.cmake  system.c  system.h
streamlit-web-app/: README.md  requirements.txt  streamlit_app.py
